--- a/sofia2-delete/sofia2-delete.html
+++ b/sofia2-delete/sofia2-delete.html
@@ -86,7 +86,7 @@
 		<span><img style="margin-left: 5px;" src="icons/sofia2.png"/><h2 style="display:inline"> Sofia2</h2>
 		<p>Node deleting data in an ontology</p>
 		<p><code>Ontology</code> Name of the ontology if the checkbox is selected, else the name of the ontology have to go in the <code>msg.ontology</code></p>
-		<p><code>Query</code> Query to update if the checkbox is selected, else the query have to go in the <code>msg.query</code></p>
+		<p><code>Query</code> Query to delete if the checkbox is selected, else the query have to go in the <code>msg.query</code></p>
 		<p><code>Query Type</code> Query Type of the query if the checkbox is selected, else the query type have to go in the <code>msg.queryType</code></p>
 	</script>
 
